--- a/predictor_style.css
+++ b/predictor_style.css
@@ -12,7 +12,7 @@ body {
   background-color: #ddd;
   font-weight: bold;
 }
-.risk-display, .priority-display {
+.dropdown-left, .dropdown-right {
   font-size: 1em;
   color: #333;
 }
@@ -36,13 +36,17 @@ body {
   gap: 10px;
   margin-top: 20px;
 }
+.button-line {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 30px;
+}
 select, input[type=number] {
   padding: 5px;
   font-size: 16px;
 }
 button {
-  display: block;
-  margin: 20px auto;
   padding: 10px 20px;
   font-size: 16px;
 }
